--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,10 @@ django-widget-tweaks = "*"
 django-crispy-forms = "*"
 coverage = "*"
 django-cleanup = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
+django-phonenumber-field = "*"
+phonenumbers = "*"
 
 [requires]
 python_version = "3.6"
