--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 django-phonenumber-field = "*"
 phonenumbers = "*"
+rules = "*"
 
 [requires]
 python_version = "3.6"
